# Csphere

.github/workflows/: ci_cd.yml
backend/: .env.example  .gitignore  bookmark_extraction.py  chrome_bookmarks.csv  my_archive_test_content.txt  pyproject.toml  scraper.py  scraper2.py
backend/alembic/: env.py
backend/alembic/versions/: 10a2bc716159_adding_html_url_for_static_web_rendering.py  1e2cab304cac_folder_embedding_column_in_folder_table.py  2994a72baf17_adding_bucketing_mode_boolean_column_to_.py  4a23460e20b9_adding_in_foreign_contraint.py  5249d1cdad1b_adding_in_contenttag_table_for_the_.py  55170ec071fa_putting_tags_relationship_inside_.py  59bbe3b9cb96_getting_rid_of_the_usertag_table_for_.py  82732e62263b_adding_html_url_for_static_web_rendering.py  8c28d27938c8_tag_database_details.py  9076b42a5b56_added_keyowrds_and_url_patterns_in_the_.py  9d82db84f6ea_tag_tables_and_many_to_many_tags.py  c32fb8abe107_adding_decription_column_to_folder_table.py  c4ba502e213e_adding_in_embedding_update_timestamp.py  dac411465e74_adding_in_user_embedding.py
backend/app/: dependencies.py
backend/app/ai/: embedder.py  summarizer.py
backend/app/api/: main.py
backend/app/core/: logging.py  settings.py
backend/app/data_models/: content.py  folder.py  tag.py  user.py  user_tag.py
backend/app/db/: database.py  init_db.py
backend/app/embeddings/: embedding_manager.py
backend/app/exceptions/: content_exceptions.py  folder.py  tag_exceptions.py
backend/app/functions/: AWS_s3.py
backend/app/routes/: __init__.py  auth.py  content.py  folder.py  tags.py  users.py
backend/app/schemas/: content.py  folder.py  tag.py
backend/app/services/: content_services.py  folder.py  tag_services.py
backend/app/utils/: hashing.py  s3.py  user.py
backend/archives/: test.html  wiki_test.html
chrome_extension/: manifest.json  popup.css  popup.html  popup.js
csphere-worker/: requirements.txt  worker.py
csphere-worker/classes/: EmbeddingManager.py
csphere-worker/core/: settings.py
csphere-worker/data_models/: content.py  content_tag.py  folder.py  tag.py
csphere-worker/exceptions/: bucket_excpetions.py
csphere-worker/processors/: __init__.py  base.py  bucket.py  content.py  web.py
csphere-worker/schemas/: content_schemas.py  folder_schemas.py
csphere-worker/tests/: bucket_test.py
csphere-worker/utils/: utils.py
extension/: background.js  config.dev.js  content.js  manifest.json  popup.css  popup.html  popup.js  utils.js
extension/chrome/: background.js  build.js  manifest.json  popup.css  popup.html  popup.js
extension/firefox/: background.js  build.js  config.dev.js  manifest.json  popup.html  popup.js
extension/manifests/: manifest.firefox.json
frontend/: .env.example  global.error.tsx  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/(auth)/: page.js
frontend/src/app/(content)/home/: AddBookmarkPopover.tsx  ArchiveModal.tsx  BookmarkLayout.tsx  BookmarkToolbar.tsx  layout.tsx  page.tsx
frontend/src/app/(content)/home/tags/: page.tsx  (+1 more)
frontend/src/app/(content)/setting/: page.tsx
frontend/src/app/components/: Footer.tsx  LogoComponent.tsx  SignupForm.tsx  sphere.tsx
frontend/src/components/: BookMarkSettingIcon.tsx  BookmarkCard.tsx  BookmarkList.tsx  BookmarksPage.tsx  PlatformButton.tsx  ShareModal.tsx  VisitButton.tsx
frontend/src/components/common/: BookMarkSettingIcon.tsx  BookmarkCard.tsx  BookmarkList.tsx  BookmarksPage.tsx  CategoryFilter.tsx  FeatureSection.tsx  NoteButton.tsx  PlatformButton.tsx  SearchInput.tsx  UnreadBookmarksPage.tsx
frontend/src/components/folder/: FolderBookmarkCard.tsx  FolderSelectionTab.tsx
frontend/src/components/tag/: TagSelectionTab.tsx
frontend/src/components/ui/: settings.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: bookmark.tsx
user-embedding-worker/: Dockerfile  build.sh  main.py  pyproject.toml
user-embedding-worker/classes/: EmbeddingManager.py  dummy.txt  iab.py
user-embedding-worker/data_models/: category.py  content.py  content_ai.py  content_category.py  content_item.py  content_tag.py  folder.py  folder_item.py  tag.py  user.py
user-embedding-worker/database/: database.py  database_init.py
user-embedding-worker/processors/: __init__.py  base_processor.py  user_embedding.py
user-embedding-worker/schemas/: user.py
(+11 files in other folders)
