[project]
name = "user-embedding-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "beautifulsoup4==4.14.3",
    "certifi==2026.1.4",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "cssselect==1.4.0",
    "distro==1.9.0",
    "exceptiongroup==1.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.13.0",
    "lxml==6.0.2",
    "lxml-html-clean==0.4.3",
    "numpy==2.2.6",
    "openai==2.16.0",
    "pgvector==0.4.2",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "rapidfuzz==3.14.3",
    "readability-lxml==0.8.4.1",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.46",
    "tqdm==4.67.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uv==0.9.27",
]
